testsuite/tests/quantified-constraints/T19690.stderr
T19690.hs:12:16: error: [GHC-05617]
    • Could not solve: ‘Hold c => c’ arising from a use of ‘go’
    • In the expression: go
      In an equation for ‘anythingDict’:
          anythingDict
            = go
            where
                go :: (Hold c => c) => Dict c
                go = Dict

